Need to use the secure HTTPS for ajax. Maybe fixed size of what? on mobile?

--- a/styles/main.css
+++ b/styles/main.css
@@ -81,4 +81,9 @@ a {
   .modal-content {
     width: 80%;
   }
+  
+  #aboutButton {
+    width: 80px;
+    height: 30px;
+  }
 }
